--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,33 +1,6 @@
 <body style="background: #CCC;">
 <h1>Create An Article!!</h1>
 
-<% if @article.errors.any? %>
-    <h2>The Following Errors Prevent Article From Being Created</h2>
-    <ul> 
-    <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-    <% end %>
-    </ul>
-<% end %>
-
-<%= form_for @article do |f| %>
-     <div>
-        <span style="margin-right: 30px;">
-            <%= f.label :title %>:
-        </span>
-        <%= f.text_field :title %>
-     </div>
-     <div style="padding: 5px;">
-        <span style="margin-right: 10px;">
-            <%= f.label :description %>:
-        </span>
-        <%= f.text_area :description %>        
-     </div>
-     <div style="padding: 20px; ">
-         <%= f.submit %>
-     </div>
-<% end %>
-
-<%= link_to "Back to articles listing", articles_path %>
+<%= render 'form' %>
 
 </body>
