--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>This is the homepage.</h1>
+<div class="centerit jumbotron">
+    <h1>The Alpha Blog</h1>
+    <%= link_to "Sign up now", "#", class: "btn btn-danger btn-lg" %>  
+</div>
 
-<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', about_path %>
