--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,28 +1,37 @@
-<% if @article.errors.any? %>
-    <h2>The Following Errors Prevent Article From Being Created</h2>
-    <ul> 
-    <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-    <% end %>
-    </ul>
-<% end %>
+<%= render "shared/errors", obj: @article %>
 
-<%= form_for @article do |f| %>
-     <div>
-        <span style="margin-right: 30px;">
+<div class='row'>
+    <div class='col-md-12'>
+        
+<%= form_for(@article, :html => {class: "form-horizontal", role: "form"})  do |f| %>
+     <div class="form-group">
+         <div class="control-label col-sm-2">
             <%= f.label :title %>:
-        </span>
-        <%= f.text_field :title %>
-     </div>
-     <div style="padding: 5px;">
-        <span style="margin-right: 10px;">
+        </div>
+        <div class="col-sm-8">
+            <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
+        </div>
+    </div>
+  
+     <div class="form-group">
+         <div class="control-label col-sm-2">
             <%= f.label :description %>:
-        </span>
-        <%= f.text_area :description %>        
-     </div>
-     <div style="padding: 20px; ">
-         <%= f.submit %>
-     </div>
-<% end %>
+        </div>
+        <div class="col-sm-8">
+            <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of the article" %>
+        </div>
+    </div>  
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <%= f.submit class: "btn btn-primary btn-lg" %>
+        </div>
+    </div>
+    
+<% end %> 
 
-<%= link_to "Back to articles listing", articles_path %>
+<div class="col-xs-4 col-xs-offset-4">
+    <%= link_to "[ Cancel and return to articles listing ]", articles_path %>
+</div>
+
+    </div>
+</div>
