--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,3 @@
-<body style="background: #CCC;">
-<h1>Create An Article!!</h1>
+<h1 class="centerit">Create An Article!!</h1>
 
 <%= render 'form' %>
-
-</body>
