--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,14 @@
-<h1>Showing Selected Article</h1>
+<h2 align="center">Title: <%= @article.title %></h2>
 
-<div>
-    Title: <%= @article.title %>
-</div> 
-<div>
-    Description: <%= @article.description %>
-</div>
-
-<div style="margin-top: 20px;">
-    <span style="padding-right: 30px;"><%= link_to "Edit", edit_article_path(@article.id) %></span> 
-    <%= link_to "Go Back to articles list", articles_path %> 
+<div class="well col-xs-8 col-xs-offset-2">
+    <h4 class="centerit description"><strong>Description:</strong></h4>
+    <hr>
+    <%= simple_format(@article.description) %>
+    <div class="article-actions">
+        <%= link_to "Edit this article", edit_article_path(@article.id), class: "btn btn-xs btn-primary" %> 
+        <%= link_to "Delete this article", article_path(@article), method: :delete, 
+            data: { confirm: "Are you sure you want to delete article?"}, 
+            class: "btn btn-xs btn-danger" %>
+        <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %> 
+    </div>
 </div>
