--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,13 @@
             </div>
             <div class="article-body">
                 <%= truncate(r.description, length: 100) %>
-            </div>
+                <div class="article-meta-details">
+                    <small>Created by: <%= r.user.username if r.user %>,
+                                   <%= time_ago_in_words(r.created_at) %> ago,
+                                   last updated: <%= time_ago_in_words(r.updated_at) %> ago
+                    </small>
+                </div>    
+            </div> 
             
             <div class="article-actions">
                 <%= link_to "Edit this article", edit_article_path(r.id), class: "btn btn-xs btn-primary" %> 
